--- a/index.Rmd
+++ b/index.Rmd
@@ -59,7 +59,7 @@ To get a BibTex entry, run `citation("biodivercity")`.
 
 ## Data sources
 
-Development of a Biodiversity Index for Residential Towns using Biodiversity Field Surveys. 14 June 2016, 6.5 years, Ministry of National Development Research Fund (MNDRF) Grant, $1,286,979.79. Awarded to the National University of Singapore (host institution) and the Singapore Housing Development Board. 
+Development of a Biodiversity Index for Residential Towns using Biodiversity Field Surveys. 14 June 2016, 6.5 years, Ministry of National Development Research Fund (MNDRF) Grant. Awarded to the National University of Singapore (host institution) and the Singapore Housing & Development Board. 
 
 <br>
 
