re-build site after R CMD CHECK

--- a/vignettes/more/animals-species-analyses.Rmd
+++ b/vignettes/more/animals-species-analyses.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Animals: Species-level Analyses"
-subtitle: ""
+subtitle: "Song, Xiao Ping"
 author: "Author"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
