--- a/vignettes/use-cases.Rmd
+++ b/vignettes/use-cases.Rmd
@@ -80,7 +80,7 @@ Landscape data from remotely sensed sources (e.g. satellite imagery) can be proc
 Urban design and planning involves the consideration of multiple design scenarios. But since such landscapes do not exist, snapshots of remotely sensed data can not be used. Manually generated landscape elements (e.g., vector data for vegetation and water) may instead be produced from prospective designs, but the format and types of such data must be compatible with those used in the predictive models. For instance, when selecting landscape predictors used to build the models, land cover classification into discrete areas would be more compatible with data generated from scenario planning, compared to using continuous values from spectral indices (e.g., NDVI). Vegetation generated in design scenarios may then be rasterized into land cover-types (Fig. 1), and used to replace the remotely sensed data within regions of interest (Fig. 2). The resulting raster data may then be used to predict the occurrence of biodiversity for the particular scenario. 
 
 ```{r out.width = "100%", fig.align='center', dpi = 300, echo = FALSE, fig.cap = "**Figure 1: Example showing how manually generated vector data can be converted to raster data used in the predictive models.**"}
-knitr::include_graphics("data-compatibility-rasterize.jpg", dpi = 300)
+knitr::include_graphics("data-compatibility-rasterize.png", dpi = 300)
 ```
 
 <br>
