--- a/vignettes/process-landscape.Rmd
+++ b/vignettes/process-landscape.Rmd
@@ -115,11 +115,11 @@ The following lists the possible metrics that may be summarised from the downloa
     
 <br>
 
-The function `genfeatures_osm()` can be be used to generate the summaries, at multiple buffer radii. This returns a list, with each element corresponding to a particular buffer size. For example, all building metrics can be calculated, up to `100` and `200` metres away from `points`:
+The function `calc_osm()` can be be used to generate the summaries, at multiple buffer radii. This returns a list, with each element corresponding to a particular buffer size. For example, all building metrics can be calculated, up to `100` and `200` metres away from `points`:
 
-```{r genfeatures_osm, warning = FALSE, message = FALSE, eval = FALSE}
+```{r calc_osm, warning = FALSE, message = FALSE, eval = FALSE}
 
-genfeatures_osm(vector = buildings, points = points,
+calc_osm(vector = buildings, points = points,
                 name = "buildings",
                 buffer_sizes = c(100, 200),
                 building_levels = "levels") 
@@ -127,14 +127,14 @@ genfeatures_osm(vector = buildings, points = points,
 ```
 
 
-Alternatively, the function `genfeatures_osm_specified()` can be used to generate the metrics specified by their name. To do so, we need to supply a character vector of predictor names to the function argument `predictors_osm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_osm_` denotes that the variables are based on OpenStreetMap data. For example, we can summarise the building floor area ratio at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
+Alternatively, the function `calc_specific_osm()` can be used to generate the metrics specified by their name. To do so, we need to supply a character vector of predictor names to the function argument `predictors_osm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_osm_` denotes that the variables are based on OpenStreetMap data. For example, we can summarise the building floor area ratio at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
 
-```{r genfeatures_osm_specified, warning = FALSE, message = FALSE}
+```{r calc_specific_osm, warning = FALSE, message = FALSE}
 
 # variables to summarise
 predictors <- c("r100m_osm_buildingFA_ratio", "r200m_osm_buildingFA_ratio") 
 
-points <- genfeatures_osm_specified(vector_osm = buildings,
+points <- calc_specific_osm(vector_osm = buildings,
                                     building_levels = "levels",
                                     predictors_osm = predictors,
                                     points = points)
@@ -272,10 +272,10 @@ rm(lsm)
 
 <br>
 
-Similar to the OSM data, we will use the `points` dataset, which were randomly generated within the `sampling_areas` earlier on. A wide variety of metrics may be summarised using the function `genfeatures_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `100` and `200` metres away from `points`
+Similar to the OSM data, we will use the `points` dataset, which were randomly generated within the `sampling_areas` earlier on. A wide variety of metrics may be summarised using the function `calc_lsm()`. The following example summarises all 'class-level' metrics for vegetation cover (`veg_classified`), up to `100` and `200` metres away from `points`
 
-```{r genfeatures_lsm, eval = FALSE, warning = FALSE, message = FALSE}
-genfeatures_lsm(raster = veg_classified,
+```{r calc_lsm, eval = FALSE, warning = FALSE, message = FALSE}
+calc_lsm(raster = veg_classified,
                 points = points,
                 buffer_sizes = c(100, 200), # in metres
                 level = c("class"),
@@ -283,13 +283,13 @@ genfeatures_lsm(raster = veg_classified,
                 class_values = c(1)) # pixel value of class
 ```
 
-Alternatively, the function `genfeatures_lsm_specified()` can be used to generate the metrics specified by their name. Similar to `genfeatures_osm_specified()`, we need to supply a character vector of predictor names to the function argument `predictors_lsm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_lsm_` denotes that the variables are landscape metrics. For example, we can summarise the percentage of vegetated landscape (`pland` metric) at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
+Alternatively, the function `calc_specific_lsm()` can be used to generate the metrics specified by their name. Similar to `calc_specific_osm()`, we need to supply a character vector of predictor names to the function argument `predictors_lsm`. The naming format is `r<value>m_osm_<metric>`; the prefix `r<value>m` denotes the buffer radius that the particular landscape data was summarised within, and `_lsm_` denotes that the variables are landscape metrics. For example, we can summarise the percentage of vegetated landscape (`pland` metric) at a radius of 100 m and 200 m around `points`–these variables are appended as new columns.
 
-```{r genfeatures_lsm_specified, warning = FALSE, message = FALSE}
+```{r calc_specific_lsm, warning = FALSE, message = FALSE}
 
 predictors <- c("r100m_lsm_veg_pland", "r200m_lsm_veg_pland") # variables to summarise
 
-points <- genfeatures_lsm_specified(raster = veg_classified,
+points <- calc_specific_lsm(raster = veg_classified,
                                     predictors_lsm = predictors,
                                     class_names = c("veg"),
                                     class_values =  c(1),
